--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -47,4 +47,4 @@ jobs:
             run: terraform plan
 
           - name: Terraform apply infrastructure
-            run: terraform init -auto-approve
+            run: terraform apply -auto-approve
