--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -46,5 +46,8 @@ jobs:
             id: plan
             run: terraform plan
 
-          - name: Terraform apply infrastructure
-            run: terraform init -auto-approve
+          #- name: Terraform apply infrastructure
+            #run: terraform apply -auto-approve
+
+          - name: Terraform destroy infrastructure
+            run: terraform destroy -auto-approve
